# pivo-core

./: .travis.yml  CMakeLists.txt  README.md
modules/: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/Log/: Log.cpp  Log.h
src/Main/: Application.cpp  Application.h  CLIOptions.cpp  CLIOptions.h  General.h  Main.cpp  Singleton.h  Version.h
src/ModuleInterface/: InputModule.h  InputModuleFeatures.h  OutputModule.h  OutputModuleFeatures.h
src/Processing/: Analyzer.cpp  Analyzer.h  Graph.cpp  Graph.h  ModuleInterfacing.cpp
src/ViewStructs/: CallGraphStructs.h  CallTreeStructs.h  FlatProfileStructs.h  HeatMapStructs.h  NormalizedData.h  UnitIdentifiers.h
